fix quote on small screen

--- a/css/general.css
+++ b/css/general.css
@@ -80,7 +80,7 @@ img{
 /* quote */
 
 .quote{
-	font-size:48px;
+	font-size:45px;
 	font-weight:lighter;
 	color:#152428;
 }
@@ -90,6 +90,7 @@ img{
 		font-size:60px;
 		font-weight:lighter;
 		color:#152428;
+		transition:all 300ms linear;
 	}
 }
 .quote strong{
